products/monitoring/prometheus/templates/prometheus/prometheus-security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus-security-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prometheus-prometheus
  oidc:
    clientID: "wypK6TtAm6Yj2BpOEbpYPidHBQkDXCCd7hfyzlLL"
    clientSecret:
      name: prometheus-oidc-secret
    provider:
      issuer: https://authentik.feddema.dev/application/o/prometheus/
    redirectURL: https://prometheus.feddema.dev/oauth2/callback
    logoutPath: /oauth2/logout
